<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hy.powerplatform.login.activity.LoginActivity">

    <com.hy.powerplatform.http.views.Header
        android:id="@+id/header"
        style="@style/Heander"
        app:header_is_left_iv_visiable="false"
        app:header_title="@string/app_header">
    </com.hy.powerplatform.http.views.Header>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvHeard"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="80dp"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:layout_marginBottom="40dp"
                android:text="@string/welcome_user_app"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_margin="25dp"
                android:background="@drawable/linearlayout_radius">
                <ImageView
                    style="@style/ImaheView"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/nickname"/>
                <EditText
                    android:id="@+id/et_LoginName"
                    style="@style/EditText"
                    android:textColor="@color/bg_do_botttom"
                    android:hint="@string/login_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_margin="25dp"
                android:background="@drawable/linearlayout_radius">
                <ImageView
                    style="@style/ImaheView"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/password" />
                <EditText
                    android:id="@+id/et_LoginPassword"
                    style="@style/EditText"
                    android:textColor="@color/bg_do_botttom"
                    android:hint="@string/login_pwd" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="match_parent"
                android:layout_margin="25dp"
                android:layout_height="45dp"
                android:text="@string/login"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:background="@drawable/linearlayout_colore_radius"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
